feat: 修改曝光回调时机、样式细节

--- a/src/BizDrawer.less
+++ b/src/BizDrawer.less
@@ -6,7 +6,7 @@
   left: 0;
   width: 100%;
   overflow: hidden;
-  min-height: 150px;
+  min-height: 500px;
 
   &.drawer-open {
 
@@ -19,8 +19,8 @@
 
   .drawer-sidebar {
     width: 100%;
-    height: 150px;
-    background: #ffebb3;
+    height: 500px;
+    background-color: #FFFFFF;
     transform: translateY(100%);
     z-index: 109;
     position: absolute;
